force-app/main/default/objects/BrillioFC__PermissionSet_Detail__c/BrillioFC__PermissionSet_Detail__c.object-meta.xml
<CustomObject>
    <label>ForceClinic PermissionSet Detail</label>
    <nameField>
        <label>ForceClinic PermissionSet Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic PermissionSet Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>