force-app/main/default/objects/BrillioFC__PermissionSet_Detail__c/fields/BrillioFC__ApplicationAccess__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__ApplicationAccess__c</fullName>
    <label>ApplicationAccess</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>