force-app/main/default/objects/BrillioFC__PermissionSet_Detail__c/fields/BrillioFC__ModifyAllData__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__ModifyAllData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ModifyAllData</label>
    <type>Checkbox</type>
</CustomField>