force-app/main/default/objects/BrillioFC__PermissionSet_Detail__c/fields/BrillioFC__Number_of_Active_Users__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Number_of_Active_Users__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Active Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>