force-app/main/default/objects/BrillioFC__PermissionSet_Detail__c/fields/BrillioFC__ObjectAccess__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__ObjectAccess__c</fullName>
    <label>ObjectAccess</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>