force-app/main/default/objects/BrillioFC__PermissionSet_Detail__c/fields/BrillioFC__TabAccess__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__TabAccess__c</fullName>
    <label>TabAccess</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>