force-app/main/default/objects/BrillioFC__PermissionSet_Detail__c/fields/BrillioFC__VFPageAccess__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__VFPageAccess__c</fullName>
    <label>VFPageAccess</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>