force-app/main/default/objects/BrillioFC__PermissionSet_Detail__c/fields/BrillioFC__ViewAllData__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__ViewAllData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ViewAllData</label>
    <type>Checkbox</type>
</CustomField>