force-app/main/default/objects/BrillioFC__PermissionSet_Detail__c/fields/BrillioFC__ViewAllUsers__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__ViewAllUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ViewAllUsers</label>
    <type>Checkbox</type>
</CustomField>