force-app/main/default/objects/BrillioFC__PermissionSet_Detail__c/listViews/BrillioFC__All.listView-meta.xml
<ListView>
    <fullName>BrillioFC__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>